--- a/pilhas/tarefab/test.html
+++ b/pilhas/tarefab/test.html
@@ -1,1 +1,11 @@
-<div><title></title></div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Title of the document
+        </title>
+    </head>
+    <body>
+        The content of the document
+    </body>
+</html>
