Adicionando casos de teste e tratando tags de comentário.

--- a/pilhas/tarefab/test2.html
+++ b/pilhas/tarefab/test2.html
@@ -3,7 +3,7 @@
     <head>
         <title>
             Title of the document
-        <!-- </title>>>> -->
+        </title>
     </head>
     <body>
         The content of the document
