--- a/pilhas/tarefab/test3.html
+++ b/pilhas/tarefab/test3.html
@@ -3,9 +3,11 @@
     <head>
         <title>
             Title of the document
-        <!-- </title>>>> -->
+        </title>
+        <body>
     </head>
-    <body>
+    
         The content of the document
-    </body>
+        
+        </body>
 </html>
